# pmp

./: .eslintrc.cjs  .eslintrc.js  .gitignore  .prettierrc  .prettierrc.json  CONTRIBUTING.md  README.md  index.html  package.json  pnpm-lock.yaml  postcss.config.cjs  tailwind.config.cjs  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml  update-node-dependencies.yml  update-rust-packages.yml
src/: App.tsx  data.ts  index.scss  index.tsx  tauriCommands.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: music.rs
src/components/Nav/: Nav.tsx  NavButton.tsx  style.scss
src/pages/Download/: Download.tsx  index.ts
src/pages/Home/: Home.tsx
src/pages/Playing/: Playing.tsx  index.ts
src/pages/Settings/: Settings.tsx
src/styles/: heading.scss
